# OrbitaMarket

./: .dockerignore  .gitignore  PROJECT.md  README.md  docker-compose.yml  pom.xml
api-gateway/: Dockerfile  pom.xml
api-gateway/src/main/resources/: application.yml
auth-service/: Dockerfile  pom.xml
autotests/: README.md  pom.xml
contracts/: pom.xml
docker/: init-schemas.sql
docs/: analytics-result.md  analytics.sql  c4-containers.puml  c4-context.puml  checklist.md  final-audit.md  gitleaks-report.json  payment-flow.md  requirements-compliance.md  security-triage.md  semgrep-report.json  verification.md
docs/allure-report/: allure-maven.html  index.html
docs/allure-report/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
docs/allure-report/export/: influxDbData.txt  prometheusData.txt
docs/allure-report/history/: history.json
docs/allure-report/widgets/: behaviors.json  duration-trend.json  duration.json  executors.json  severity.json  suites.json  summary.json
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js  vite.config.ts
frontend/src/: App.tsx  AuthViews.tsx  NotificationCenter.tsx  SatelliteMissionMap.tsx  api.ts  components.tsx  frameStorage.ts  styles.css
frontend/tests/: map-aoi.e2e.mjs
geo-pricing-service/: Cargo.toml  Dockerfile  build.rs
geo-pricing-service/proto/: geo_pricing.proto
geo-pricing-service/src/: main.rs
notifications-service/: Dockerfile  pom.xml
orders-service/: Dockerfile  pom.xml
payments-service/: Dockerfile  pom.xml
(+73 files in other folders)
