[package]
name = "geo-pricing-service"
version = "1.0.0"
edition = "2024"

[dependencies]
axum = "0.8"
geojson = "0.24"
prost = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tonic = "0.12"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
urlencoding = "2"

[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = "0.12"
